syntax = "proto3";

option csharp_namespace = "Eroad.FleetManagement.Contracts";

package fleetmanagement.command;

// Command service for vehicle operations
service VehicleCommand {
  rpc AddVehicle(AddVehicleRequest) returns (AddVehicleResponse);
  rpc UpdateVehicle(UpdateVehicleRequest) returns (UpdateVehicleResponse);
  rpc ChangeVehicleStatus(ChangeVehicleStatusRequest) returns (ChangeVehicleStatusResponse);
}

// Command service for driver operations
service DriverCommand {
  rpc AddDriver(AddDriverRequest) returns (AddDriverResponse);
  rpc UpdateDriver(UpdateDriverRequest) returns (UpdateDriverResponse);
  rpc ChangeDriverStatus(ChangeDriverStatusRequest) returns (ChangeDriverStatusResponse);
  rpc AssignDriverToVehicle(AssignDriverToVehicleRequest) returns (AssignDriverToVehicleResponse);
}

// Request messages - Vehicle
message AddVehicleRequest {
  string id = 1;
  string registration = 2;
  string vehicle_type = 3;
}

message UpdateVehicleRequest {
  string id = 1;
  string registration = 2;
  string vehicle_type = 3;
}

message ChangeVehicleStatusRequest {
  string id = 1;
  string status = 2;
}

// Request messages - Driver
message AddDriverRequest {
  string id = 1;
  string name = 2;
  string driver_license = 3;
}

message UpdateDriverRequest {
  string id = 1;
  string name = 2;
  string driver_license = 3;
}

message ChangeDriverStatusRequest {
  string id = 1;
  string status = 2;
}

message AssignDriverToVehicleRequest {
  string id = 1;
  string vehicle_id = 2;
}

// Response messages
message AddVehicleResponse {
  string message = 1;
}

message UpdateVehicleResponse {
  string message = 1;
}

message ChangeVehicleStatusResponse {
  string message = 1;
}

message AddDriverResponse {
  string message = 1;
}

message UpdateDriverResponse {
  string message = 1;
}

message ChangeDriverStatusResponse {
  string message = 1;
}

message AssignDriverToVehicleResponse {
  string message = 1;
}
